Write content, add picture.

--- a/h7.md
+++ b/h7.md
@@ -12,7 +12,7 @@ The source for the exercise [h7](https://terokarvinen.com/2021/configuration-man
 *Mem: 16 Gt LPDDR4X*  
 *Storage: 512 Gt M.2 2230 NVMe PCIe 3.0 SSD*  
 
-## How to make a base development and testing environment for Django
+## How to make a base development and testing environment for Django idempotently
 
 ![Pic 1. Django-admin ready for users](pics/h7/1.png)  
 *Django-admin console ready for logging in*
@@ -1112,3 +1112,428 @@ source /home/djangouser/env/bin/activate && ./manage.py migrate && ./manage.py m
 
 I tested it out and had similar results, ie. still the wrong user. I was running the environment as kallet, my user, so that would explain that. I had to take time off to think about this and what I should do, so I quit @ 20.22.
 		
+Started again the next day @ 13.30. 
+
+I concluded that there was no way for me to know what user the user of this Salt state would like to use, so I it easy to customize with a Jinja variable.
+
+```SaltStack
+init.sls
+
+{% set name = "kallet" %} #The name of the user you're going to be operating the dev server as.
+
+virtualenv:
+  pkg.installed
+
+/home/{{ name }}/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/{{ name }}/env/bin/activate && django-admin startproject baseproject:
+  cmd.run:
+    - unless: test -d /home/{{ name }}/baseproject
+    - cwd: /home/{{ name }}/
+
+source /home/{{ name }}/env/bin/activate && ./manage.py migrate && ./manage.py makemigrations:
+  cmd.run:
+    - unless: source /home/{{ name }}/env/bin/activate && ./manage.py migrate | grep "No migrations to apply"
+    - cwd: /home/{{ name }}/baseproject/
+
+/home/{{ name }}:
+  file.directory:
+    - user: {{ name }}
+    - group: {{ name }}
+    - dir_mode: 755
+    - file_mode: 755
+    - follow_symlinks: True
+    - recurse:
+      - user
+      - group
+      - mode
+```
+
+The last thing I thought about, was making the setup just a tad more secure, so I decided to add a custom settings.py for the project and allow access only from localhost, so that my state wouldn't be implemented to production without atleast modifying that file manually.
+	
+	micro /home/kallet/baseproject/baseproject/settings.py
+	
+```
+#settings.py
+
+ALLOWED_HOSTS = ['localhost']
+```
+
+	sudo cp /home/kallet/baseproject/baseproject/settings.py /srv/salt/djangoadmin/
+	sudoedit /srv/salt/djangoadmin/init.sls
+
+```SaltStack
+{% set name = "kallet" %} #The name of the user you're going to be operating the dev server as.
+
+virtualenv:
+  pkg.installed
+
+/home/{{ name }}/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/{{ name }}/env/bin/activate && django-admin startproject baseproject:
+  cmd.run:
+    - unless: test -d /home/{{ name }}/baseproject
+    - cwd: /home/{{ name }}/
+
+/home/{{ name }}/baseproject/baseproject/settings.py:
+  file.managed:
+    - source: salt://djangoadmin/settings.py
+
+source /home/{{ name }}/env/bin/activate && ./manage.py migrate && ./manage.py makemigrations:
+  cmd.run:
+    - unless: source /home/{{ name }}/env/bin/activate && ./manage.py migrate | grep "No migrations to apply"
+    - cwd: /home/{{ name }}/baseproject/
+
+/home/{{ name }}:
+  file.directory:
+    - user: {{ name }}
+    - group: {{ name }}
+    - dir_mode: 755
+    - file_mode: 755
+    - follow_symlinks: True
+    - recurse:
+      - user
+      - group
+      - mode
+```
+
+Also, every project would need an app anyway, so I decided to add that to kick off the development. I used a [familiar source](https://terokarvinen.com/2022/django-instant-crm-tutorial/?fromSearch=django) for this. I also made my localhost change with a similar solution and deleted the above method from my state.
+
+```SaltStack
+{% set name = "kallet" %} #The name of the user you're going to be operating the dev server as.
+{% set project = "baseproject" %} #The name off your project
+{% set app = "myapp" %} #The name off your app in your project
+
+virtualenv:
+  pkg.installed
+
+/home/{{ name }}/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/{{ name }}/env/bin/activate && django-admin startproject {{ project }}:
+  cmd.run:
+    - unless: test -d /home/{{ name }}/baseproject
+    - cwd: /home/{{ name }}/
+
+/home/{{ name }}/{{ project }}/{{ project }}/settings.py:
+  file.blockreplace:
+    - marker_start: "    'django.contrib.staticfiles',"
+    - marker_end: "]"
+    - content: "    '{{ app }}'"
+    - marker_start: "DEBUG = True"
+    - marker_end: "# Application definition"
+    - content: "ALLOWED_HOSTS = ['localhost']"
+    - append_if_not_found: True
+
+source /home/{{ name }}/env/bin/activate && ./manage.py migrate && ./manage.py makemigrations:
+  cmd.run:
+    - unless: source /home/{{ name }}/env/bin/activate && ./manage.py migrate | grep "No migrations to apply"
+    - cwd: /home/{{ name }}/{{ project }}/
+
+/home/{{ name }}/{{ project }}:
+  file.directory:
+    - user: {{ name }}
+    - group: {{ name }}
+    - dir_mode: 755
+    - file_mode: 755
+    - follow_symlinks: True
+    - recurse:
+      - user
+      - group
+      - mode
+```
+
+This was my finished state. The things a developer would have to do to start a project would be:
+
+1. install salt-minion
+2. mkdir /srv/salt/
+3. clone this state's repo to /srv/salt
+4. sudoedit 3 variables in init.sls
+5. run the state
+6. create a superuser
+7. start development
+
+Things I have chosen to NOT INCLUDE:
+- A default model (since I have no clue what user's would be developing)
+- Registering the said model to admin.py for the same reason
+- Automatically starting the dev-server with Salt, since that solution would have no Django dev tools at the user's disposal
+
+Finished state in a separate repo:
+https://github.com/kalletolonen/djangoadmin
+
+### Testing
+
+To test my instructions & my state, I made an empty VM with just Debian 11 & Guest Additions installed. The tests proved that I had messed up the settings.py, since it was not available and I didn't have requirements.txt ready either.
+
+```
+local:
+----------
+          ID: virtualenv
+    Function: pkg.installed
+      Result: True
+     Comment: The following packages were installed/updated: virtualenv
+     Started: 15:49:46.907590
+    Duration: 8426.097 ms
+     Changes:   
+              ----------
+              libexpat1-dev:
+                  ----------
+                  new:
+                      2.2.10-2+deb11u3
+                  old:
+              libpython3-dev:
+                  ----------
+                  new:
+                      3.9.2-3
+                  old:
+              libpython3.9-dev:
+                  ----------
+                  new:
+                      3.9.2-1
+                  old:
+              python-pip-whl:
+                  ----------
+                  new:
+                      20.3.4-4+deb11u1
+                  old:
+              python3-appdirs:
+                  ----------
+                  new:
+                      1.4.4-1
+                  old:
+              python3-dev:
+                  ----------
+                  new:
+                      3.9.2-3
+                  old:
+              python3-distlib:
+                  ----------
+                  new:
+                      0.3.2+really+0.3.1-0.1
+                  old:
+              python3-distutils:
+                  ----------
+                  new:
+                      3.9.2-1
+                  old:
+              python3-filelock:
+                  ----------
+                  new:
+                      3.0.12-2
+                  old:
+              python3-importlib-metadata:
+                  ----------
+                  new:
+                      1.6.0-2
+                  old:
+              python3-lib2to3:
+                  ----------
+                  new:
+                      3.9.2-1
+                  old:
+              python3-more-itertools:
+                  ----------
+                  new:
+                      4.2.0-3
+                  old:
+              python3-pip:
+                  ----------
+                  new:
+                      20.3.4-4+deb11u1
+                  old:
+              python3-setuptools:
+                  ----------
+                  new:
+                      52.0.0-4
+                  old:
+              python3-virtualenv:
+                  ----------
+                  new:
+                      20.4.0+ds-2+deb11u1
+                  old:
+              python3-wheel:
+                  ----------
+                  new:
+                      0.34.2-1
+                  old:
+              python3-zipp:
+                  ----------
+                  new:
+                      1.0.0-3
+                  old:
+              python3.9-dev:
+                  ----------
+                  new:
+                      3.9.2-1
+                  old:
+              virtualenv:
+                  ----------
+                  new:
+                      20.4.0+ds-2+deb11u1
+                  old:
+              zlib1g-dev:
+                  ----------
+                  new:
+                      1:1.2.11.dfsg-2+deb11u1
+                  old:
+----------
+          ID: /home/kallet/env
+    Function: virtualenv.managed
+      Result: False
+     Comment: pip requirements file 'salt://djangoadmin/requirements.txt' not found
+     Started: 15:49:55.336080
+    Duration: 18.342 ms
+     Changes:   
+----------
+          ID: source /home/kallet/env/bin/activate && django-admin startproject baseproject
+    Function: cmd.run
+      Result: False
+     Comment: Command "source /home/kallet/env/bin/activate && django-admin startproject baseproject" run
+     Started: 15:49:55.355037
+    Duration: 1014.443 ms
+     Changes:   
+              ----------
+              pid:
+                  4591
+              retcode:
+                  1
+              stderr:
+                  /bin/bash: line 1: /home/kallet/env/bin/activate: No such file or directory
+              stdout:
+----------
+          ID: /home/kallet/baseproject/baseproject/settings.py
+    Function: file.blockreplace
+      Result: False
+     Comment: /home/kallet/baseproject/baseproject/settings.py: file not found
+     Started: 15:49:56.369640
+    Duration: 0.956 ms
+     Changes:   
+----------
+          ID: source /home/kallet/env/bin/activate && ./manage.py migrate && ./manage.py makemigrations
+    Function: cmd.run
+      Result: True
+     Comment: unless condition is true
+     Started: 15:49:56.370691
+    Duration: 6.37 ms
+     Changes:   
+----------
+          ID: /home/kallet/baseproject
+    Function: file.directory
+      Result: True
+     Comment: Directory /home/kallet/baseproject updated
+     Started: 15:49:56.377188
+    Duration: 3.101 ms
+     Changes:   
+              ----------
+              /home/kallet/baseproject:
+                  New Dir
+
+Summary for local
+------------
+Succeeded: 3 (changed=3)
+Failed:    3
+------------
+Total states run:     6
+Total run time:   9.469 s
+```
+
+I had some errors, which were a result of trying to do something with a file that hadn't yet been created. My updated final state was as follows:
+
+```SaltStack
+{% set name = "kallet" %} #The name of the user you're going to be operating the dev server as.
+{% set project = "baseproject" %} #The name off your project
+{% set app = "myapp" %} #The name off your app in your project
+
+virtualenv:
+  pkg.installed
+
+/home/{{ name }}/env:
+  virtualenv.managed:
+    - system_site_packages: True
+    - requirements: salt://djangoadmin/requirements.txt
+
+source /home/{{ name }}/env/bin/activate && django-admin startproject {{ project }}:
+  cmd.run:
+    - unless: test -d /home/{{ name }}/baseproject
+    - cwd: /home/{{ name }}/
+
+source /home/{{ name }}/env/bin/activate && ./manage.py migrate && ./manage.py makemigrations:
+  cmd.run:
+    - unless: source /home/{{ name }}/env/bin/activate && ./manage.py migrate | grep "No migrations to apply"
+    - cwd: /home/{{ name }}/{{ project }}/
+
+/home/{{ name }}/{{ project }}/{{ project }}/settings.py:
+  file.blockreplace:
+    - marker_start: "    'django.contrib.staticfiles',"
+    - marker_end: "]"
+    - content: "    '{{ app }}'"
+    - marker_start: "DEBUG = True"
+    - marker_end: "# Application definition"
+    - content: "ALLOWED_HOSTS = ['localhost']"
+    - append_if_not_found: True
+
+/home/{{ name }}/{{ project }}:
+  file.directory:
+    - user: {{ name }}
+    - group: {{ name }}
+    - dir_mode: 755
+    - file_mode: 755
+    - recurse:
+      - user
+      - group
+      - mode
+```
+
+To try this out once more from scratch, I made another VM and gave the following commands:
+
+	sudo apt-get update
+	sudo apt-get install -y salt-minion git
+	sudo mkdir /srv/salt/
+	cd /srv/salt
+	sudoedit /srv/salt/djangoadmin/init.sls #Edited to my spec
+
+
+```
+1st run
+
+Summary for local
+------------
+Succeeded: 6 (changed=6)
+Failed:    0
+------------
+Total states run:     6
+Total run time:  17.312 s
+```
+
+The second run still had an error, regarding the fact that the project already existed, so I made some changes and started over with the test. The mistake was that I had missed a spot:
+
+```SaltState
+source /home/{{ name }}/env/bin/activate && django-admin startproject {{ project }}:
+  cmd.run:
+    - unless: test -d /home/{{ name }}/{{ project }} #This was not a variable before
+    - cwd: /home/{{ name }}/
+```
+
+The next time around I had succeeded:
+```
+After 3rd run
+
+Summary for local
+------------
+Succeeded: 6
+Failed:    0
+------------
+Total states run:     6
+Total run time:   4.768 s
+```
+
+![Pic 16 Django-admin ready with Salt](pics/h7/16.png)  
+*Django-admin console ready with Salt*
