--- a/h7.md
+++ b/h7.md
@@ -19,12 +19,12 @@ The source for the exercise [h7](https://terokarvinen.com/2021/configuration-man
 
 Django is a web development framework that makes it easy to get things rolling fast. The process of creating a Django dev environment is a series of manual steps that I set out to automate.
 
-Finished state: https://github.com/kalletolonen/djangoadmin
+Finished state: https://github.com/kalletolonen/djangoadmin  
 Licence for the state: GPL 2.0
 
 The purpose of this article is to show the process and method of creating a Salt State for a development server for Django that runs on localhost.
 
-The current maturity state is at "hello world" in the finished repo.
+The current maturity state is 1.0 in the finished repo.
 
 Requirements for using the state:
 Debian 11
@@ -58,7 +58,7 @@ First I cloned a new base VM with VirtualBox. My gameplan was to first install t
 	sudo apt-get update
 	sudo apt-get install -y micro bash-completion virtualenv
 
-After this I needed to start the create and start the  environment.
+After this I needed to create and start the  environment.
 
 	 virtualenv --system-site-packages -p python env/
 	 source env/bin/activate
@@ -116,7 +116,7 @@ Returned to work @ 13.05.
 
 ### Installing Salt minion
 
-I didn't need salt-master for this project by default, but I installed it anyway on the same go. I opened a fesh terminal in my home direcotory and entered a command.
+I didn't need salt-master for this project by default, but I installed it anyway on the same go. I opened a fresh terminal in my home direcotory and entered the following commands.
 
 	sudo apt-get install -y salt-master salt-minion
 	salt --version
@@ -128,7 +128,7 @@ salt 3002.6
 
 ### Installing Virtualenv with salt
 
-First I created a folder for my project and a helloworld for Salt in it.
+First I created a folder for my project and put a "helloworld" for Salt in it.
 
 	sudo mkdir -p /srv/salt/djangoadmin
 	sudoedit /srv/salt/djangoadmin/init.sls
@@ -238,7 +238,7 @@ Now I had an issue with Virtualenv, since it didn't work anymore.
 ModuleNotFoundError: No module named 'virtualenv'
 ```
 
-Virtualenv is an [isolated copy of Python](https://www.pythonforbeginners.com/basics/how-to-use-python-virtualenv), so deleting some directories propably damaged the system quite bad.
+Virtualenv is an [isolated copy of Python](https://www.pythonforbeginners.com/basics/how-to-use-python-virtualenv), so deleting some directories propably damaged the system quite badly.
 
 So the next thing was to install python3 again to fix this issue. I uninstalled python3 and added it to my state.
 
@@ -351,7 +351,7 @@ Total states run:     2
 Total run time: 202.991 ms
 ```
 
-ls did actually prove, that it did not work at all, eventhough the stdout suggested it did.
+The command "ls" did actually prove that it did not work at all, eventhough the stdout suggested it did.
 	
 	ls
 
@@ -507,7 +507,7 @@ To be sure, I checked my location for the env.
 
 ### Installing Django in Virtualenv
 
-The documentation hinted at the fact that I could have a requirements.txt in my salt-server's file location, so I added those lines to my state and a requirements.txt to /srv/salt/djangoadmin/
+I remembered from earlier [exercices](https://github.com/kalletolonen/ConfManSystems/blob/main/h5.md) that I could have a requirements.txt in my salt-server's file location, so I added those lines to my state and a requirements.txt to /srv/salt/djangoadmin/
 
 	sudoedit /srv/salt/djangoadmin/requirements.txt
 	#wrote django and saved
@@ -672,14 +672,14 @@ Succeeded: 4 (changed=2)
 Failed:    1
 ```
 
-The error told me that the Virtual Environment wasn't propably working. The state produced Django errors too, so I wasn't completely off.
+The error told me that the Virtual Environment wasn't propably working. The state produced some different errors too.
 
 ```
 [ERROR   ] Command 'source' failed with return code: 127
 [ERROR   ] stderr: /bin/bash: line 1: django-admin.py: command not found
 ```
 
-So after a lot of trial and error I had a non-idempotent state that successfully checked the Django version (ie. executed inside an environment.
+So after a lot of trial and error I had a non-idempotent state that successfully checked the Django version (ie. executed inside an environment.)
 
 ```SaltStack
 #init.sls
@@ -813,12 +813,12 @@ create Django project:
           - virtualenv: /home/djangouser/env
 ```
 
-I tried my new state out. This time it worked like a charm! I also noticed a bug in Micro. When you have 2 terminal windows open and save your existing file, it doesn't actually save the file. I executed my state from another terminal and it executed the old state, eventhought I had saved it on the other terminal in Micro (and left the editor open).
+I tried my new state out. This time it worked like a charm! I also noticed a bug/feature in Micro. When you have 2 terminal windows open and save your existing file, it doesn't actually save the file to it's original location. I executed my state from another terminal and it executed the old state, eventhought I had saved it on the other terminal in Micro (and left the editor open).
 
 ![Pic 13. Proper directory structure](pics/h7/13.png)  
 *Tree showed that now I had a proper directory structure*  
 
-Next I tried to make the command idempotent. I did a ton of trial and error, which I will not document in great detail. [A source](https://bencane.com/2013/09/23/remote-command-execution-with-saltstack/) that made me understand how to use the unless-parameter was helpfull. I also needed help with the [test command](https://www.cyberciti.biz/tips/find-out-if-file-exists-with-conditional-expressions.html). I made my state a bit leaner, since half of my state wasn't doing anything - I figured this out by commenting all the lines out individually until something made a difference.
+Next I tried to make the command idempotent. I did a ton of trial and error, which I will not document in great detail. [A source](https://bencane.com/2013/09/23/remote-command-execution-with-saltstack/) that made me understand how to use the unless-parameter was helpful. I also needed help with the [test command](https://www.cyberciti.biz/tips/find-out-if-file-exists-with-conditional-expressions.html). I made my state a bit leaner, since half of my state wasn't doing anything - I figured this out by commenting all the lines out individually until something made a difference.
 
 ```SaltStack
 #init.sls
@@ -903,7 +903,7 @@ Succeeded: 4 (changed=1)
 Failed:    1
 ```
 
-I realized that the earlier env-activation would have been ended before the next command, so I just added that to a new command.
+I realized that the earlier env-activation would have ended before the next command, so I just added that to a new command.
 
 ```SaltStack
 djangouser:
@@ -932,7 +932,7 @@ source /home/djangouser/env/bin/activate && ./manage.py runserver:
 ![Pic 14. Django up and running](pics/h7/14.png)  
 *Django was running @ localhost*  
 
-On a second thought, this wasn't actually helpfull, since I didn't have the debug-tools of the development server at my use (Salt was just executing endlessly (ie. running the server)). On this note I omitted this command from my state and opted to do the migrations instead.
+On a second thought, this wasn't actually helpful, since I didn't have the debug-tools of the development server at my use (Salt was just executing endlessly (ie. running the server)). On this note I omitted this command from my state and opted to do the migrations instead.
 
 ### Making migrations in the Django project
 
@@ -987,23 +987,9 @@ To check out my results on a concrete manner, I navigated to my project and star
 ![Pic 15. Admin console was present](pics/h7/15.png)  
 *Django had the admin console*  
 
-### Creating a superuser for the project
-	
-	
-
-
-
-
-
-	
-
 ### Automating the superuser creation
 
-Django does have a CLI-command to create a superuser without user input, so I decided to try it out. My main problem was that ./manage.py was producing not producing stdout. It was printing stderr instead and, to my knowledge, you can't use grep on that. Django does not allow setting a superuser from CLI with a password without human input(0), so I googled for a workaround (1,2).
-
-Source 0: https://vuyisile.com/how-to-automate-creating-a-django-super-user/
-Source 1: https://code.djangoproject.com/ticket/27769
-Source 2: https://unix.stackexchange.com/questions/117467/how-to-permanently-set-environmental-variables
+Django does have a CLI-command to create a superuser without user input, so I decided to try it out. My main problem was that ./manage.py was producing not producing stdout. It was printing stderr instead and, to my knowledge, you can't use grep on that. Django does not allow setting a superuser from CLI with a password without human input[0](https://vuyisile.com/how-to-automate-creating-a-django-super-user/), so I googled for a workaround ([1](https://code.djangoproject.com/ticket/27769),[2](https://unix.stackexchange.com/questions/117467/how-to-permanently-set-environmental-variables)).
 
 I added a line to my bash.bashrc.
 
@@ -1055,7 +1041,7 @@ That resulted in an unexpected error.
 django.db.utils.OperationalError: attempt to write a readonly database
 ```
 	
-Salt had ran as root and thus everything had only writing access for root.
+Salt had ran as root and thus the user rights were not optimal.
 
 ```
 (env) kallet@confmansys:/home/djangouser/baseproject$ ls -l
@@ -1114,7 +1100,7 @@ I tested it out and had similar results, ie. still the wrong user. I was running
 		
 Started again the next day @ 13.30. 
 
-I concluded that there was no way for me to know what user the user of this Salt state would like to use, so I it easy to customize with a Jinja variable.
+I concluded that there was no way for me to know what user the user of this Salt state would like to use it for, so I would make it easy to customize the state with Jinja variables.
 
 ```SaltStack
 init.sls
@@ -1152,7 +1138,7 @@ source /home/{{ name }}/env/bin/activate && ./manage.py migrate && ./manage.py m
       - mode
 ```
 
-The last thing I thought about, was making the setup just a tad more secure, so I decided to add a custom settings.py for the project and allow access only from localhost, so that my state wouldn't be implemented to production without atleast modifying that file manually.
+The second thing I thought about was making the setup just a tad more secure, so I decided to add a custom settings.py for the project and allow access only from localhost, so that my state wouldn't be implemented to production without atleast modifying that file manually.
 	
 	micro /home/kallet/baseproject/baseproject/settings.py
 	
@@ -1261,8 +1247,8 @@ This was my finished state. The things a developer would have to do to start a p
 6. create a superuser
 7. start development
 
-Things I have chosen to NOT INCLUDE:
-- A default model (since I have no clue what user's would be developing)
+Things I had chosen to not implement on my state:
+- A default model (since I have no clue about what users would be developing)
 - Registering the said model to admin.py for the same reason
 - Automatically starting the dev-server with Salt, since that solution would have no Django dev tools at the user's disposal
 
@@ -1445,7 +1431,7 @@ Total states run:     6
 Total run time:   9.469 s
 ```
 
-I had some errors, which were a result of trying to do something with a file that hadn't yet been created. My updated final state was as follows:
+I had some errors that were a result of trying to do something with a file that hadn't yet been created. My updated final state was as follows:
 
 ```SaltStack
 {% set name = "kallet" %} #The name of the user you're going to be operating the dev server as.
